# whisper-sae

./: .gitignore  CLAUDE.md  LICENSE  README.md  decoder_sae_tiny_100k_1152_space.pth  encoder_sae_tiny_100k_1152_space.pth  librispeech_sae_training.py  pyproject.toml  requirements.txt
archive/v1/: analyze_features.ipynb
configs/: tiny_default.yaml  tiny_test.yaml
docs/: CONTINUE_HERE.md  phase1_summary.md  v1_reference.md
modal_app/: __init__.py  extract_features.py  train.py
notebooks/: logit_lens_and_attention.ipynb
scripts/: generate_readme_images.py  train.py
src/whisper_sae/: config.py
src/whisper_sae/analysis/: __init__.py  audio_extraction.py  feature_viz.py
src/whisper_sae/causal/: __init__.py
src/whisper_sae/data/: feature_cache.py  librispeech.py
src/whisper_sae/sae/: crosscoder.py  hooks.py  model.py  training.py  transcoder.py
tests/: conftest.py  test_analysis.py  test_config.py  test_crosscoder.py  test_hooks.py  test_sae_model.py  test_training.py  test_transcoder.py
